# wimsey

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SPEC-MAP.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
conformance/httpsig/: sign-basic.json
conformance/wit/: issue-basic.json
conformance/wpt/: proof-basic.json
crates/cli/: Cargo.toml
crates/cli/src/: key.rs  main.rs
crates/cli/tests/: cli.rs
crates/httpsig/: Cargo.toml
crates/httpsig/examples/: dump_vector.rs
crates/httpsig/src/: error.rs  lib.rs  message.rs  signature.rs
crates/httpsig/tests/: conformance.rs
crates/identifier/: Cargo.toml
crates/identifier/src/: lib.rs
crates/issuer/: Cargo.toml
crates/issuer/src/: lib.rs
crates/mtls/: Cargo.toml
crates/mtls/src/: lib.rs
crates/wit/: Cargo.toml
crates/wit/examples/: dump_vector.rs
crates/wit/src/: claims.rs  error.rs  jwk.rs  lib.rs  token.rs
crates/wit/tests/: conformance.rs
crates/wpt/: Cargo.toml
crates/wpt/examples/: dump_vector.rs
crates/wpt/src/: claims.rs  error.rs  lib.rs  token.rs
crates/wpt/tests/: conformance.rs
