[package]
name = "wimsey-cli"
description = "The wimsey command-line tool: issue, verify and inspect WIMSE credentials."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "wimsey"
path = "src/main.rs"

[lints]
workspace = true
