[package]
name = "wimsey-cli"
description = "The wimsey command-line tool: issue, verify and inspect WIMSE credentials."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "wimsey"
path = "src/main.rs"

[dependencies]
wimsey-identifier = { workspace = true }
wimsey-wit = { workspace = true }
wimsey-wpt = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
getrandom = "0.2"

[lints]
workspace = true
