[package]
name = "wimsey-httpsig"
description = "WIMSE workload-to-workload auth using HTTP Message Signatures (RFC 9421)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true
