[package]
name = "wimsey-httpsig"
description = "WIMSE workload-to-workload auth using HTTP Message Signatures (RFC 9421)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wimsey-wit = { workspace = true }
wimsey-identifier = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
