[package]
name = "wimsey-issuer"
description = "Experimental WIMSE credential issuer with a SPIFFE Workload API shim."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true
