[package]
name = "wimsey-mtls"
description = "WIMSE workload authentication using mutual TLS (client cert = WIC)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true
