[package]
name = "wimsey-wit"
description = "WIMSE Workload Identity Token (WIT) and Workload Identity Certificate (WIC)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wimsey-identifier = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
